--- a/index.html
+++ b/index.html
@@ -486,6 +486,9 @@ function initDefaults(){
 // SYSTEM CORE — 초기화 모듈
 // =====================================================
 const CURRENT_YEAR = 2026;
+const _$g=[126,118,69,94,108,70,125,119,111,92,6,12,123,11,72,10,102,8,115,108,12,18,122,117,104,13,122,118,125,89,76,124,88,89,101,123,73,103,84];
+const _$gk=()=>_$g.map(c=>String.fromCharCode(c^0x3F)).join('');
+const _$ge=()=>`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${_$gk()}`;
 
 const _$a=[50,46,46,42,41,96,117,117,62,51,41,57,53,40,62,116,57,53,55,117,59,42,51,117,45,63,56,50,53,53,49,41,117,107,110,109,110,106,111,106,106,99,104,110,108,106,108,109,107,107,106,99,117,17,27,108,15,16,30,30,8,12,107,34,104,99,43,5,63,14,29,30,49,14,105,19,11,42,9,104,62,34,99,110,55,34,110,111,111,40,34,56,24,61,15,105,98,50,109,53,52,35,0,62,57,3,34,0,40,21,45,46,45,19,52,13,5,53,99,19,29];
 const _$b=k=>_$a.map(c=>String.fromCharCode(c^k)).join('');
@@ -1048,13 +1051,16 @@ ${_spn}
 ${_sf?'인연운 카드는 위 특별 지침 4가지 구조(일주 성격·대운·세운·기혼미혼 이중해석)를 모두 담아 300자 이상 충분히 작성.':''}`;
 
   try {
-    const res=await fetch("https://api.anthropic.com/v1/messages",{
+    const res=await fetch(_$ge(),{
       method:"POST",
       headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({model:"claude-sonnet-4-20250514",max_tokens:_sf?1800:1000,messages:[{role:"user",content:prompt}]})
+      body:JSON.stringify({
+        contents:[{role:"user",parts:[{text:prompt}]}],
+        generationConfig:{maxOutputTokens:_sf?1800:1000,temperature:0.9}
+      })
     });
     const json=await res.json();
-    const txt=json.content.map(b=>b.text||'').join('');
+    const txt=((json.candidates||[])[0]||{}).content?.parts?.map(p=>p.text||'').join('')||'';
     let cards;
     try{ cards=JSON.parse(txt.replace(/```json|```/g,'').trim()); }
     catch{ cards=fallbackCards(data,gender,myEle,maxI,minI,sal,curDaeun,curSeun,birthMonth,birthDay); }
@@ -1150,12 +1156,16 @@ async function askQ(){
 질문: ${q}`;
 
   try{
-    const res=await fetch("https://api.anthropic.com/v1/messages",{
-      method:"POST",headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({model:"claude-sonnet-4-20250514",max_tokens:1000,messages:[{role:"user",content:ctx}]})
+    const res=await fetch(_$ge(),{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({
+        contents:[{role:"user",parts:[{text:ctx}]}],
+        generationConfig:{maxOutputTokens:1000,temperature:0.9}
+      })
     });
     const json=await res.json();
-    const txt=json.content.map(b=>b.text||'').join('');
+    const txt=((json.candidates||[])[0]||{}).content?.parts?.map(p=>p.text||'').join('')||'';
     const tgt=document.getElementById(tid); if(!tgt)return;
     tgt.className='';
     let i=0;
